feature(demo): add Netlify-hosted example with serverless checkout function, setup instructions & live demo link

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "typescript": "^5.4.0",
     "microbundle": "^0.15.1",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/react-dom": "^18.2.0",
+    "stripe": "^15.0.0",
+    "@netlify/functions": "^4.0.0"
   },
   "scripts": {
     "build": "microbundle",
