--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "netlify dev",
+    "dev": "vite",
     
     "build": "vite build",
     "preview": "vite preview"
